--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "express": "^4.17.1",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "run-p server dev",
+    "server": "nodemon server/index.js",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -36,6 +41,9 @@
     ]
   },
   "devDependencies": {
+    "nodemon": "^2.0.14",
+    "npm-run-all": "^4.1.5",
     "react-router-dom": "^5.3.0"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
