--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "babel-cli": "^6.26.0",
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "react": "^17.0.2",
