--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "@testing-library/user-event": "^12.8.3",
     "babel-cli": "^6.26.0",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sequelize": "^6.9.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
