--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg-hstore": "^2.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-rating-stars-component": "^2.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.1",
     "sequelize": "^6.9.0",
