--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "faker": "^5.5.3",
     "nodemon": "^2.0.14",
     "npm-run-all": "^4.1.5",
     "react-router-dom": "^5.3.0"
