--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
     "sequelize": "^6.9.0",
     "web-vitals": "^1.1.2"
   },
